--- a/src/app/routes/home.component.scss
+++ b/src/app/routes/home.component.scss
@@ -1,5 +1,5 @@
 td {
-    border:1px solid;padding:0px;
+    outline:1px solid;padding:0px;
 }
 td input[type="radio"] {
     position:absolute;
@@ -11,7 +11,24 @@ td label {
     display:block;
     color:#fff;
     font-family:arial;
+
 }
 td input:checked + label {
     background-color:#669900
+}
+
+table{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-spacing: 0px;
+    
+}
+
+.map-container {
+  position: relative;
+  display: inline-block;
+  line-height: 0;
 }
