--- a/src/app/routes/home.component.html
+++ b/src/app/routes/home.component.html
@@ -1,17 +1,19 @@
 <div class="map-container">
-    <img src="assets/johto-kanto-large.png" alt="Game Map" class="map-image" />
-    <table>
-        <tr *ngFor="let row of [].constructor(rows); let i = index">
-            <td *ngFor="let col of [].constructor(cols); let j = index">
-                <input 
-                    type="radio" 
-                    name="grid" 
-                    [id]="'item' + i + '_' + j"
-                    [checked]="selectedCell.row === i && selectedCell.col === j"
-                    (change)="cellChange($event, i, j)"
-                />
-                <label [for]="'item' + i + '_' + j"></label>
-            </td>
-        </tr>
-    </table>
+  <img src="assets/johto-kanto-2.jpg" alt="Game Map" class="map-image" />
+  <div class="map-grid" [attr.style]="'--rows:' + rows + '; --cols:' + cols + ';'">
+    <ng-container *ngFor="let r of [].constructor(rows); let i = index">
+      <ng-container *ngFor="let c of [].constructor(cols); let j = index">
+        <div class="grid-cell">
+          <input
+            type="radio"
+            name="grid"
+            [id]="'item' + i + '_' + j"
+            [checked]="selectedCell.row === i && selectedCell.col === j"
+            (change)="cellChange($event, i, j)"
+          />
+          <label class="cell-label" [for]="'item' + i + '_' + j"></label>
+        </div>
+      </ng-container>
+    </ng-container>
+  </div>
 </div>
