--- a/src/app/routes/home.component.html
+++ b/src/app/routes/home.component.html
@@ -1,5 +1,5 @@
 <div class="map-container">
-  <img src="assets/johto-kanto-2.jpg" alt="Game Map" class="map-image" />
+  <img src="assets/johto-kanto-x4.jpg" alt="Game Map" class="map-image" />
   <div class="map-grid" [attr.style]="'--rows:' + rows + '; --cols:' + cols + ';'">
     <ng-container *ngFor="let r of [].constructor(rows); let i = index">
       <ng-container *ngFor="let c of [].constructor(cols); let j = index">
