--- a/src/app/routes/home.component.html
+++ b/src/app/routes/home.component.html
@@ -1,9 +1,8 @@
-<div class="background-wrapper">
-  <img src="assets/background-1-large.jpg" alt="Background Image" class="background-img" />
-</div>
+
 <div class="wrapper">
   <div class="image-container">
     <img src="assets/location_1.png" alt="Location Icon" class="location-image" />
+    <img src="/assets/border-full-transparent.png" class="border-overlay" />
   </div>
 
   <div class="map-container" [class.active]="overlayActive">
