--- a/src/app/routes/home.component.scss
+++ b/src/app/routes/home.component.scss
@@ -1,7 +1,15 @@
 .wrapper {
   display: flex;
   flex-direction: column; 
-  align-items: center;           
+  align-items: center;      
+  position: fixed; 
+  justify-content: center;  
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 .map-container {
@@ -41,6 +49,7 @@
   width: auto;                     /* let the image keep native width unless constrained */
   max-width: calc(100vw - 48px);   /* never exceed viewport minus some padding */
   height: auto;
+  width: 100%;
 }
 
 .toggle-overlay-btn {
@@ -56,7 +65,8 @@
 .image-container {
   position: relative;
   display: inline-block;
-
+  width: 60vw;
+  height: 80vh;
 }
 
 .image-container::before {
@@ -74,8 +84,11 @@
   position: relative;
   z-index: 1;
   display: block;
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  object-fit: contain;
+  top: 10px;
+  left: 10px;
 }
 
 .map-image {
@@ -176,4 +189,16 @@
 .background-img {
   width: 100%;
   height: 100%;
+}
+
+.border-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;   /* scales the overlay with the image */
+  pointer-events: none;  /* clicks pass through */
+  image-rendering: pixelated; /* keep pixel-art crisp */
+  z-index: 2;
 }
