--- a/src/app/routes/home.component.html
+++ b/src/app/routes/home.component.html
@@ -1,5 +1,10 @@
 
 <div class="wrapper">
+
+  <div class="background-wrapper">
+    <img src="assets/night-forest-large.jpg" alt="Background Image" class="background-img" />
+  </div>
+
   <div class="image-container">
     <img src="assets/location_1.png" alt="Location Icon" class="location-image" />
     <img src="/assets/border-full-transparent.png" class="border-overlay" />
@@ -9,6 +14,8 @@
     <button (click)="overlayActive = !overlayActive" class="toggle-overlay-btn">
       {{ overlayActive ? 'Hide Map' : 'Show Map' }}
     </button>
+    
+
     <div class="map-inner">
     <img src="assets/johto-kanto-x4.jpg" alt="Game Map" class="map-image" />
       <div class="map-grid" [attr.style]="'--rows:' + rows + '; --cols:' + cols + ';'">
