--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -14,6 +14,8 @@
   padding: 0 2em;
   z-index: 1000;
   image-rendering: pixelated;
+    filter: drop-shadow(0px 12px 24px rgba(0, 0, 0, 0.85))
+        drop-shadow(0px 6px 12px rgba(0, 0, 0, 0.6));
 }
 
 .logo {
