--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  margin: 0;
+  padding: 0;
+}
+body{
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+
+#game-wrapper {
+  position: relative;
+  width: 1920px;
+  height: 1080px;
+  margin: 0 auto;      
+  transform: scale(1);  
+  transform-origin: top left;
+}
