typography and frontend styling

--- a/frontend/src/app/routes/home.component.html
+++ b/frontend/src/app/routes/home.component.html
@@ -17,10 +17,10 @@
 
     <div class="map-inner">
       @if(!madeGuess){
-        <button class="make-guess-btn" (click)="makeGuess()" [disabled]="!overlayActive">Make Guess</button>
+        <button class="make-guess-btn pixel-corners hgss-text hgss-text-button" (click)="makeGuess()" [disabled]="!overlayActive">Make Guess</button>
       }
       @else {
-        <button class="make-guess-btn" (click)="nextRound()" [disabled]="!overlayActive">Next Round</button>
+        <button class="make-guess-btn pixel-corners hgss-text hgss-text-button" (click)="nextRound()" [disabled]="!overlayActive">Next Round</button>
       }
       <img src="assets/johto-kanto-x4.jpg" alt="Game Map" class="map-image" />
         <div class="map-grid" [attr.style]="'--rows:' + rows + '; --cols:' + cols + ';'">
@@ -52,14 +52,20 @@
             </ng-container>
           </ng-container>
         </div>
-            @if(selectedLocation){
+        @if(selectedLocation){
+          <div class="location-card pixel-corners">
+
             <div class="location-info">
-              <h2>{{ selectedLocation.name }}</h2>
-              <p>{{ selectedLocation.description }}</p>
-              <p>row: {{selectedLocation.coordinates.row}} col: {{selectedLocation.coordinates.col}}</p>
+              <h2 class="hgss-text" style="font-size: 32px;">{{ selectedLocation.name }}</h2>
+              <div class="location-details">
+                <p class="hgss-text" style="font-size: 18px;">{{ selectedLocation.description }}</p>
+                <!-- <p class="hgss-text" style="font-size: 18px;">row: {{selectedLocation.coordinates.row}} col: {{selectedLocation.coordinates.col}}</p> -->
+              </div>
             </div>
-          }
+          </div>
+        }
       </div>
+
   </div>
 
 </div>
