--- a/frontend/src/app/routes/home.component.scss
+++ b/frontend/src/app/routes/home.component.scss
@@ -62,8 +62,19 @@
   cursor: pointer;
   z-index: 6;
   position: fixed;
-  top: -5%;
+  top: -11.5%;
   right: 15%;
+  background-color: rgb(74,66,66);
+  border: none;
+  clip-path: polygon(
+  15% 0%,   
+  85% 0%,  
+  100% 100%,
+  0% 100%   
+);
+font-size: 18px;
+
+
 }
 
 .make-guess-btn {
@@ -76,13 +87,17 @@
   right: 1%;            
   background: linear-gradient(
     to bottom,
-    rgb(41, 140, 231) 0%,    /* white at top */
-    rgb(41, 140, 231) 50%,   /* white extends to 40% */
-    rgb(16, 90, 214) 50%,   /* gray starts at 40% */
-    rgb(16, 90, 214) 60%,   /* gray extends to 70% */
-    rgb(0, 49, 198) 60%,      /* dark gray starts at 70% */
-    rgb(0, 49, 198) 100%      /* dark gray until bottom */
+    rgb(41, 140, 231) 0%,  
+    rgb(41, 140, 231) 50%, 
+    rgb(16, 90, 214) 50%,  
+    rgb(16, 90, 214) 60%, 
+    rgb(0, 49, 198) 60%,     
+    rgb(0, 49, 198) 100%  
   );
+}
+
+.make-guess-btn:hover{
+  filter: brightness(0.85);
 }
 
 .location-card {
@@ -94,24 +109,14 @@
   padding: 8px;
   max-width: 425px;
   display: inline-block;
-  background-color: white;
-  // background: linear-gradient(
-  //   to bottom,
-  //   rgb(41, 140, 231) 0%,    /* white at top */
-  //   rgb(41, 140, 231) 50%,   /* white extends to 40% */
-  //   rgb(16, 90, 214) 50%,   /* gray starts at 40% */
-  //   rgb(16, 90, 214) 60%,   /* gray extends to 70% */
-  //   rgb(0, 49, 198) 60%,      /* dark gray starts at 70% */
-  //   rgb(0, 49, 198) 100%      /* dark gray until bottom */
-  // );
     background: linear-gradient(
     to bottom,
-    rgb(231, 231, 231) 0%,    /* white at top */
-    rgb(231, 231, 231) 50%,   /* white extends to 40% */
-    rgb(214, 214, 214) 50%,   /* gray starts at 40% */
-    rgb(214, 214, 214) 60%,   /* gray extends to 70% */
-    rgb(198, 198, 198) 60%,      /* dark gray starts at 70% */
-    rgb(198, 198, 198) 100%      /* dark gray until bottom */
+    rgb(41, 140, 231) 0%,    
+    rgb(41, 140, 231) 50%, 
+    rgb(16, 90, 214) 50%, 
+    rgb(16, 90, 214) 60%,  
+    rgb(0, 49, 198) 60%,      
+    rgb(0, 49, 198) 100%      
   );
   border-radius: 8px;
   box-sizing: border-box;
@@ -125,14 +130,14 @@
 }
 
 .location-info h2 {
-  font-size: 18px;
+  font-size: 30px;
   margin: 0 0 0.2em 0;
   padding-bottom: 0.2em;
 }
 
 .location-details p {
   margin: 0.2em 0;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .image-container {
@@ -411,6 +416,7 @@
 .pixel-corners::after {
   margin: -4px;
 }
+
 
 .hgss-text-button{
   font-size: 22px;
