--- a/frontend/src/app/routes/home.component.html
+++ b/frontend/src/app/routes/home.component.html
@@ -1,75 +1,88 @@
 
 <div class="wrapper">
 
-  <div class="background-wrapper">
-    <img src="assets/night-forest-large.jpg" alt="Background Image" class="background-img" />
-  </div>
-
-  <div class="image-container">
-    <img [src]="image_url" alt="Location Icon" class="location-image" />
-    <img src="/assets/border-full-transparent.png" class="border-overlay" />
-  </div>
-
-  <div class="map-container" [class.active]="overlayActive">
-    <button (click)="overlayActive = !overlayActive" class="hgss-text hgss-text-button toggle-overlay-btn">
-      {{ overlayActive ? 'Hide Map' : 'Show Map' }}
-    </button>
-
-    <div class="map-inner">
-      @if(!madeGuess){
-        <button class="make-guess-btn pixel-corners hgss-text hgss-text-button" (click)="makeGuess()" [disabled]="!overlayActive">
-          Make Guess
-
-        </button>
+    <div class="background-wrapper">
+      <img src="assets/night-forest-large.jpg" alt="Background Image" class="background-img" />
+    </div>
+      @if(gameStatus === "won"){
+        <app-victory></app-victory>
+      }
+      @else if(gameStatus === "lost"){
+        <app-game-over></app-game-over>
       }
       @else {
-        <button class="make-guess-btn pixel-corners hgss-text hgss-text-button" (click)="nextRound()" [disabled]="!overlayActive">
-          Next Round
-        </button>
-      }
-      <img src="assets/johto-kanto-x4.jpg" alt="Game Map" class="map-image" />
-        <div class="map-grid" [attr.style]="'--rows:' + rows + '; --cols:' + cols + ';'">
-          <ng-container *ngFor="let r of [].constructor(rows); let i = index">
-            <ng-container *ngFor="let c of [].constructor(cols); let j = index">
-              <div 
-                class="grid-cell"
-                [class.reveal]="madeGuess && resultCell?.row === i && resultCell?.col === j"
-                [class.highlight]="isHighlighted(i, j)"
-                [ngClass]="getBorderClasses(i, j)"
-              >
-                <input
-                  type="radio"
-                  name="grid"
-                  [id]="'item' + i + '_' + j"
-                  [checked]="selectedCell.row === i && selectedCell.col === j"
-                  (change)="cellChange($event, i, j)"
-                  [disabled]="madeGuess"
-                  
-                />
-                <label 
-                  [class.inactive]="!overlayActive" 
-                  class="cell-label" 
-                  [for]="'item' + i + '_' + j"
-                  [class.disabled]="madeGuess"
-                  [attr.data-coords]="i + ',' + j"
-                ></label>
-              </div>
-            </ng-container>
-          </ng-container>
-        </div>
-        @if(selectedLocation){
-          <div class="location-card pixel-corners">
-
-            <div class="location-info">
-              <h2 class="hgss-text" style=" color: rgb(255, 255, 255); text-shadow: 1.5px 1.5px 0px rgb(41, 41, 41);">{{ selectedLocation.name }}</h2>
-              <div class="location-details">
-                <p class="hgss-text" style="font-size: 18px; color: rgb(255, 255, 255); text-shadow: 1.5px 1.5px 0px rgb(41, 41, 41);">{{ selectedLocation.description }}</p>
-              </div>
-            </div>
-          </div>
-        }
+      <div class="image-container">
+        <img [src]="image_url" alt="Location Icon" class="location-image" />
+        <img src="/assets/border-full-transparent.png" class="border-overlay" />
       </div>
 
-  </div>
+      <div class="map-container" [class.active]="overlayActive">
+        <button (click)="overlayActive = !overlayActive" class="hgss-text hgss-text-button toggle-overlay-btn">
+          {{ overlayActive ? 'Hide Map' : 'Show Map' }}
+        </button>
+        @if(madeGuess){
+          <div class="pixel-corners result-cell-location-name" [ngClass]="resultGuess">
+            <h2 class="hgss-text hgss-text-button">{{resultCellName}}</h2>
+          </div>
+        }
+
+        <div class="map-inner">
+          @if(!madeGuess){
+            <button class="make-guess-btn pixel-corners hgss-text hgss-text-button" (click)="makeGuess()" [disabled]="!overlayActive">
+              Make Guess
+            </button>
+          }
+          @else {
+            <button class="make-guess-btn pixel-corners hgss-text hgss-text-button" (click)="nextRound()" [disabled]="!overlayActive">
+              Next Round
+            </button>
+          }
+          <img src="assets/johto-kanto-x4.jpg" alt="Game Map" class="map-image" />
+            <div class="map-grid" [attr.style]="'--rows:' + rows + '; --cols:' + cols + ';'">
+              <ng-container *ngFor="let r of [].constructor(rows); let i = index">
+                <ng-container *ngFor="let c of [].constructor(cols); let j = index">
+                  <div 
+                    class="grid-cell"
+                     #grid
+                    [class.reveal]="madeGuess && resultCell?.row === i && resultCell?.col === j"
+                    [class.highlight]="isHighlighted(i, j)"
+                    [ngClass]="getBorderClasses(i, j)"
+                  >
+                    <input
+                      type="radio"
+                      name="grid"
+                      [id]="'item' + i + '_' + j"
+                      [checked]="selectedCell.row === i && selectedCell.col === j"
+                      (change)="cellChange($event, i, j)"
+                      [disabled]="madeGuess"
+                      
+                    />
+                    <label 
+                      [class.inactive]="!overlayActive" 
+                      class="cell-label" 
+                      [for]="'item' + i + '_' + j"
+                      [class.disabled]="madeGuess"
+                      [attr.data-coords]="i + ',' + j"
+                    ></label>
+                  </div>
+                </ng-container>
+              </ng-container>
+            </div>
+
+            @if(selectedLocation){
+              <div class="location-card pixel-corners">
+
+                <div class="location-info">
+                  <h2 class="hgss-text" style=" color: rgb(255, 255, 255); text-shadow: 1.5px 1.5px 0px rgb(41, 41, 41);">{{ selectedLocation.name }}</h2>
+                  <div class="location-details">
+                    <p class="hgss-text" style="font-size: 18px; color: rgb(255, 255, 255); text-shadow: 1.5px 1.5px 0px rgb(41, 41, 41);">{{ selectedLocation.description }}</p>
+                  </div>
+                </div>
+              </div>
+            }
+          </div>
+      </div>
+  }
+  
 
 </div>
