--- a/frontend/src/app/routes/home.component.scss
+++ b/frontend/src/app/routes/home.component.scss
@@ -96,6 +96,37 @@ font-size: 18px;
   );
 }
 
+.result-cell-location-name{
+  margin: 0;
+  padding: 0.5em 6em;
+  z-index: 8;
+  top: -6%;
+}
+
+.result-cell-location-name.correct{
+    background: linear-gradient(
+    to bottom,
+    rgb(90, 181, 41) 0%,  
+    rgb(90, 181, 41) 50%, 
+    rgb(74, 148, 41) 50%,  
+    rgb(74, 148, 41) 60%, 
+    rgb(74, 132, 49) 60%,     
+    rgb(74, 132, 49) 100%  
+  );
+}
+
+.result-cell-location-name.wrong{
+  background: linear-gradient(
+    to bottom,
+    rgb(239, 57, 57) 0%,  
+    rgb(239, 57, 57) 50%, 
+    rgb(198, 66, 66) 50%,  
+    rgb(198, 66, 66) 60%, 
+    rgb(173, 66, 66) 60%,     
+    rgb(173, 66, 66) 100%  
+  );
+}
+
 .make-guess-btn:hover{
   filter: brightness(0.85);
 }
@@ -422,4 +453,13 @@ font-size: 18px;
   font-size: 22px;
   color: rgb(255, 255, 255);
   text-shadow: 1.5px 1.5px 0px rgb(41, 41, 41);
+}
+
+.line-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* line won't block clicks */
 }
