--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -5,8 +5,8 @@
 
   @if(state){
     <div style="display: flex; gap: 3em;">
-      <h2 class="hgss-text">Lives: {{state.lives}}</h2>
-      <h2 class="hgss-text">Score: {{state.score}}</h2>
+      <h2 class="hgss-text hgss-text-button header-text">Lives: {{state.lives}}</h2>
+      <h2 class="hgss-text hgss-text-button header-text">Score: {{state.score}}</h2>
     </div>
   }
 
