--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -33,3 +33,9 @@ body{
   text-shadow: 1.5px 1.5px 0px rgb(181, 181, 181);
   letter-spacing: -0.5px;
 }
+
+.hgss-text-button{
+  font-size: 22px;
+  color: rgb(255, 255, 255);
+  text-shadow: 1.5px 1.5px 0px rgb(41, 41, 41);
+}
