--- a/frontend/src/app/routes/home.component.scss
+++ b/frontend/src/app/routes/home.component.scss
@@ -57,21 +57,22 @@
 }
 
 .toggle-overlay-btn {
-  margin-top: 1em;
-  padding: 0.5em 1em;
+  position: absolute;  
+  top: -3.5em;          
+  right: 15%;
+  padding: 1em 1.5em;
   cursor: pointer;
   z-index: 6;
-  position: fixed;
-  top: -11.5%;
-  right: 15%;
+
   background-color: rgb(74,66,66);
   border: none;
   clip-path: polygon(
-  15% 0%,   
-  85% 0%,  
-  100% 100%,
-  0% 100%   
-);
+    15% 0%,   
+    85% 0%,  
+    100% 100%,
+    0% 100%   
+  );
+
 font-size: 18px;
 
 
