--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
+<div class="background-wrapper">
+    <img src="assets/hg-ss-backgrounds/tohjo-falls-large.jpg" alt="Background Image" class="background-img" />
+</div>
 <router-outlet></router-outlet>
