--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -20,6 +20,8 @@
     <div class="backdrop" (click)="overlayActive = false"></div>
   }
   <div class="side-panel" [class.active]="overlayActive">
-    ABC
+    <div *ngFor="let item of backgroundList">
+      <button style="width: 100%;" (click)="setBackground(item)">{{item.name}}</button>
+    </div>
   </div>
 </header>
