--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div>
     <div class="background-wrapper">
-        <img src="assets/hg-ss-backgrounds/tohjo-falls-large.jpg" alt="Background Image" class="background-img" />
+        <img [src]=background?.url alt="Background Image" class="background-img" />
     </div>
     <router-outlet></router-outlet>
 </div>
